--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,16 @@ flutter:
   assets:
     - images/
 
+  fonts:
+#    family: Pacifico is what allows you to reference it.
+  - family: Pacifico
+    fonts:
+    - asset: fonts/Pacifico-Regular.ttf
+
+  - family: Source Sans Pro
+    fonts:
+      - asset: fonts/SourceSansPro-Regular.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
@@ -51,10 +61,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
